SettingsBase: Make sure we save window state on quit or geometryChange

This change makes sure we save the window state settings when:
- Screen geometry changes, such as moving between two different screens
- When application is closed

BUG:494377


(cherry picked from commit f3b32ad08b1e5685fcd2d70dba04c5a621872e1e)

f3b32ad0 SettingsBase: Make sure we save window state on quit or geometryChange

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>